<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="@dimen/tyc_padding"
    tools:context=".ui.activity.TyCActivity">

    <TextView
        android:id="@+id/tyc_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tyc_title"
        android:textAlignment="center"
        android:textSize="@dimen/tyc_titleFontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/tyc_margin"
        android:background="@color/spinner_bg"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@id/tyc_guideline_end_scrollview"
        app:layout_constraintTop_toBottomOf="@id/tyc_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tyc_paragraph_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/section_separation"
                android:text="@string/tyc_paragraph_1_title"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tyc_paragraph_content_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/tyc_paragraph_1_content"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tyc_paragraph_title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/section_separation"
                android:text="@string/tyc_paragraph_2_title"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tyc_paragraph_content_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/tyc_paragraph_2_content"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tyc_paragraph_title_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/section_separation"
                android:text="@string/tyc_paragraph_3_title"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tyc_paragraph_content_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/tyc_paragraph_3_content"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tyc_paragraph_title_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/section_separation"
                android:text="@string/tyc_paragraph_4_title"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tyc_paragraph_content_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/tyc_paragraph_4_content"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tyc_paragraph_title_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/section_separation"
                android:text="@string/tyc_paragraph_5_title"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tyc_paragraph_content_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/tyc_paragraph_5_content"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tyc_paragraph_title_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/section_separation"
                android:text="@string/tyc_paragraph_6_title"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tyc_paragraph_content_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/tyc_paragraph_6_content"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chk_aceptacion_TyC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/tyc_margin"
        android:text="@string/tyc_aceptacion"
        app:layout_constraintTop_toBottomOf="@id/tyc_guideline_end_scrollview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chk_aceptacion_TyC" />

    <!--Utilities-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/tyc_guideline_end_scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="150dp" />


</androidx.constraintlayout.widget.ConstraintLayout>